--- a/lib/TODO
+++ b/lib/TODO
@@ -27,4 +27,5 @@ Steps
         another kind of database but offline and local (on your device).
 
 NEXT STEP
-- Get access to the specific task through its id or some other method to be able to change its values when user wants to edit
+- Change the controllers of the editing thing before initialisation and when edited, let it save
+- Fix up due date make sure people can see the date they had when editing and put an option to have no date but just a thing to do
