edit task configuration successful

--- a/lib/TODO
+++ b/lib/TODO
@@ -27,5 +27,5 @@ Steps
         another kind of database but offline and local (on your device).
 
 NEXT STEP
-- Change the controllers of the editing thing before initialisation and when edited, let it save
 - Fix up due date make sure people can see the date they had when editing and put an option to have no date but just a thing to do
+- Optimise the code for adding tasks and make it look a bit prettier
