--- a/lib/TODO
+++ b/lib/TODO
@@ -27,5 +27,7 @@ Steps
         another kind of database but offline and local (on your device).
 
 NEXT STEP
-- Connect app to firebase and create authentication page for people to login (use conversate authentication code to make this step faster)
+- Optimise auth code
 - Make it so the user is logged in every time they open the app (they don't have to re-login)
+- Add tasks to the server based on individual account
+- Use stream builder alongside provider (if possible) to add these tasks and refresh changes automatically
